log
Fri 23 Sep 2022 11:34:41 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:40:17: error: invalid initializer
   40 |     TreeMap t = (TreeMap*)malloc(sizeof(TreeMap));
      |                 ^
treemap.c:41:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   41 |     t->root = NULL;
      |      ^~
treemap.c:42:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   42 |     t->current = NULL;
      |      ^~
treemap.c:43:6: error: invalid type argument of ‘->’ (have ‘TreeMap’)
   43 |     t->lower_than = lower_than;
      |      ^~
Compilation failed
4a9645b
Fri 23 Sep 2022 11:35:05 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
923b152
Fri 23 Sep 2022 11:35:17 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
76a4268
Fri 23 Sep 2022 11:43:53 AM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:10: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   81 |       if(lower_than(key,p->key)){
      |          ^~~~~~~~~~
treemap.c:82:11: error: assignment to ‘Pair *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   82 |         p = tree->root->right;
      |           ^
treemap.c:85:11: error: assignment to ‘Pair *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   85 |         p = tree->root->left;
      |           ^
treemap.c:87:10: error: too few arguments to function ‘is_equal’
   87 |       if(is_equal(p->key,key)){
      |          ^~~~~~~~
In file included from test.c:4:
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
In file included from test.c:4:
treemap.c:88:23: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   88 |         tree->current = p;
      |                       ^
cc1: all warnings being treated as errors
Compilation failed
9ead390
Fri 23 Sep 2022 11:46:45 AM UTC: 
 treemap.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:10: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   82 |       if(lower_than(key,new->pair->key)){
      |          ^~~~~~~~~~
treemap.c:88:25: error: ‘p’ undeclared (first use in this function)
   88 |       if(is_equal(tree, p->key, key)){
      |                         ^
treemap.c:88:25: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
dcbaab7
Fri 23 Sep 2022 11:47:02 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:10: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   82 |       if(lower_than(key,new->pair->key)){
      |          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
31d814d
Fri 23 Sep 2022 11:55:23 AM UTC: 
 treemap.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:13: error: ‘TreeNode’ has no member named ‘current’
   97 |       if(new->current->left == NULL && new->current->right == NULL){
      |             ^~
treemap.c:97:43: error: ‘TreeNode’ has no member named ‘current’
   97 |       if(new->current->left == NULL && new->current->right == NULL){
      |                                           ^~
Compilation failed
c331139
Fri 23 Sep 2022 11:55:40 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1f00eeb
Fri 23 Sep 2022 11:59:24 AM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|7
total_score: 5/70
abb2c01
Fri 23 Sep 2022 12:02:00 PM UTC: 
 treemap.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  6|7
total_score: 5/70
734d56e
Fri 23 Sep 2022 12:03:24 PM UTC: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
52d600b
Fri 23 Sep 2022 12:16:02 PM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
 tests:  11|6
total_score: 15/70
483b50b
Fri 23 Sep 2022 12:16:58 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
c4efff9
Fri 23 Sep 2022 12:20:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
f3407c2
Fri 23 Sep 2022 12:22:04 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
027394e
Fri 23 Sep 2022 12:23:27 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
a40cfa7
Fri 23 Sep 2022 04:53:28 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:70:24: error: expected ‘;’ before ‘}’ token
   70 |         aux = aux->left
      |                        ^
      |                        ;
   71 |         }
      |         ~               
Compilation failed
51de9ee
Fri 23 Sep 2022 04:54:00 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
a7cb4d7
Fri 23 Sep 2022 04:54:48 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:81:25: error: ‘new’ undeclared (first use in this function)
   81 |       if(is_equal(tree, new->pair->key, key)){
      |                         ^~~
treemap.c:81:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fde9a2f
Fri 23 Sep 2022 04:55:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
4da8045
Fri 23 Sep 2022 04:57:57 PM UTC: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:93:7: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   93 |       return;
      |       ^~~~~~
treemap.c:91:12: note: declared here
   91 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5cd43a8
Fri 23 Sep 2022 04:58:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 25/70
9c5f569
Fri 23 Sep 2022 04:59:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
9a64f54
